# icdt

./: .gitignore  LICENSE  README.md
docker/: Dockerfile  commands.bashrc  docker_build.sh  docker_run.sh  docker_run_no_arduino.sh  docker_run_sim.sh  entrypoint.sh  franka.sh  tekkneeka.sh
franka_ros2/franka_bringup/config/: controllers.yaml
franka_ros2/franka_bringup/launch/: franka_moveit.launch.py
franka_ros2/franka_fr3_moveit_config/config/: fr3_controllers.yaml  fr3_ros_controllers.yaml  ompl_planning.yaml
franka_ros2/franka_fr3_moveit_config/rviz/: moveit.rviz
franka_ros2/franka_fr3_moveit_config/srdf/: fr3_arm.xacro
franka_ros2/franka_hardware/test/: franka_hardware_interface_test.cpp
franka_ros2/franka_semantic_components/test/: franka_robot_model_test.hpp  franka_robot_state_test.hpp
icdt_wrapper/: package.xml  setup.py
icdt_wrapper/launch/: icdt_sim.launch.py
icdt_ws/: move_group.yaml  yo.yaml
icdt_ws/franka_ros2/franka_bringup/launch/: franka.launch.py  franka_sim_moveit.launch.py
icdt_ws/franka_ros2/franka_fr3_moveit_config/rviz/: moveit.rviz
icdt_ws/franka_ros2/franka_gazebo/franka_ign_ros2_control/: CMakeLists.txt
icdt_ws/src/src/franka_ros2/franka_semantic_components/include/franka_semantic_components/: franka_robot_state.hpp
icdt_ws/src/src/icdt_wrapper/: setup.cfg
src/: detections.rviz  quaternion_rot.py
src/franka_ros2/franka_bringup/config/: controllers.yaml  eih_cam1.calib  eih_cam1_stable.calib  eih_cam1_tweak.calib
src/franka_ros2/franka_bringup/launch/: calibrate.launch.py  franka_real_moveit.launch.py  single.launch.py
src/franka_ros2/franka_description/robots/common/: franka_arm.xacro  franka_robot.xacro
src/franka_ros2/franka_fr3_moveit_config/config/: ompl_planning.yaml
src/franka_ros2/franka_fr3_moveit_config/rviz/: moveit.rviz
src/franka_ros2/franka_gazebo/franka_gazebo_bringup/config/: franka_gazebo_controllers.yaml
src/franka_ros2/franka_gazebo/franka_gazebo_bringup/launch/: visualize_franka_robot.launch.py
src/franka_ros2/franka_hardware/include/franka_hardware/: franka_hardware_interface.hpp
src/franka_ros2/franka_semantic_components/include/franka_semantic_components/: franka_robot_model.hpp
src/icdt_interfaces/: CMakeLists.txt  package.xml
src/icdt_interfaces/srv/: ObjectDetection.srv
src/icdt_wrapper/: CMakeLists.txt  package.xml
src/icdt_wrapper/config/: franka_robot_motion_planning.yaml  kinematics.yaml  lbr_robot_motion_planning.yaml  moveit.rviz  planning.yaml  robot_motion_planning.yaml
src/icdt_wrapper/icdt_wrapper/: llm.py  llm_robo.py  perception_utils.py
src/icdt_wrapper/launch/: icdt_duet_real.launch.py  icdt_franka_real.launch.py  icdt_franka_sim.launch.py  icdt_lbr_real.launch.py  icdt_lbr_sim.launch.py  icdt_real.launch.py  icdt_sim.launch.py
src/icdt_wrapper/scripts/: duet_interface.py  llm_interface.py  robot_interface.py  whisper_interface.py  wrapper.py
src/icdt_wrapper/src/: robot_motion_planning.cpp
src/legacy_llm_scripts/: llm.py  ollama_st.py
src/llm_scripts/: test_llm_roco.py
src/perception_server/: package.xml  setup.cfg  setup.py
src/perception_server/launch/: detection_service_d405.launch.py  detection_service_d415.launch.py  detection_services.launch.py
src/perception_server/perception_server/: detection_client.py  detection_interactive_client.py  detection_publisher.py  detection_service.py  hello_world.py  owlv2.py
src/tekkneeca/lbr_fri_ros2_stack/lbr_description/urdf/med7/: med7_description.urdf.xacro
src/tekkneeca/paradocs_control/launch/: single.launch.py
src/whisper_node/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/whisper_node/whisper_ros/: task_transcription.py
